--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <spring.version>6.1.12</spring.version>
     </properties>
 
-
     <dependencies>
 
         <dependency>
@@ -38,7 +37,6 @@
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -80,10 +78,9 @@
 
         <dependency>
             <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
+            <artifactId>thymeleaf-spring6</artifactId>
             <version>3.1.2.RELEASE</version>
         </dependency>
-
     </dependencies>
     <build>
         <finalName>library-of-books</finalName>
